# SocketImage

./: .gitignore  LICENSE  README.md
SocketReceiver/: DemoReceive.cpp  SocketReceiver.sln
SocketReceiver/SocketReceiver/: DemoReceive.cpp  SocketReceiver.vcxproj  SocketReceiver.vcxproj.filters
SocketReceiver/windows/: Main.cpp  SocketImageReceiver.cpp  SocketImageReceiver.h
SocketSender/: DemoSend.cpp  SocketSender.sln
SocketSender/SocketImageSender/: CMakeLists.txt  SocketImageSender  cmake_install.cmake
SocketSender/SocketImageSender/include/: SocketImageSender.h
SocketSender/SocketImageSender/src/: SocketImageSender.cpp  main.cpp
SocketSender/SocketImageSender—linux/: CMakeCache.txt  Makefile  SocketImageSender
SocketSender/SocketImageSender—linux/include/: SocketImageSender.h
SocketSender/SocketImageSender—linux/src/: SocketImageSender.cpp  main.cpp
SocketSender/SocketSender/: DemoSend.cpp  SocketSender.vcxproj  SocketSender.vcxproj.filters
